Fix to Japanese localization.

--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -3,7 +3,7 @@
 ### Ideas ###
 JAP_rising_sun:0 "The Rising Sun"
 JAP_rising_sun_desc:0 "It is time for Japan to finally seize its place among the empires, and liberate the east from the evil clutches of the white devils! The sun has risen!"
-fengtian_exploitation:0 "Manchurian Resources"
+fengtian_exploitation:0 "Mantetsu Dividends"
 GER_KOR_support:0 "German Military Mission"
 GER_KOR_support_desc:0 "German officers have been sent to instruct our armies in our war against Japan."
 kor_blocked:0 "Blockaded by Japan"
@@ -53,8 +53,8 @@ JAP_SUN_HAW_annex:0 "Annex Hawaii!"
 JAP_SUN_HAW_annex_desc:0 "Now that the American position in the pacific is weakened we can make our move to annex Hawaii and open a path to the Americas."
 
 ### Events ###
-japfor.1.t:0 "Economic Exploitation of Fengtian"
-japfor.1.d:0 "After the conclusion of the last phase of the Chinese Civil Wars in 1928, and Japan’s intervention to protect its sphere of influence against German encroachment, the territory controlled by the Fengtian Clique was restructured into a nominally independent Republic, which promptly claimed sole legitimate rule of all China. Following the promulgation of an Imperial Ordinance ordering “the development the Republic into an independent nation possessing indivisible relations with the Japanese Empire" a year later, the fledgling Republic's economy was gradually reshaped in order to strengthen control over its government and prepare it to support the Imperial war machine. As a result, Japan maintains a great deal of influence over Fengtian, further reinforced by garrisons and an occupation zone. \n\n The core of Japanese efforts became the South Manchuria Railway Company, or “Mantetsu” for short, which had already been operating in Manchuria since 1906. While a powerful symbol of Japanese interests in China prior to the intervention, the company has since become responsible for developing and exploiting virtually every important aspect of the Manchurian economy, propelling the new Republic to become Japan’s primary source of coal and steel, as well as the producer of over half the world’s soybean supply. Today, Mantetsu has announced its highest profits to date."
+japfor.1.t:0 "Mantetsu Declares Record Earnings"
+japfor.1.d:0 "After the conclusion of the last phase of the Chinese Civil Wars in 1928, and Japan’s intervention to protect its sphere of influence against German encroachment, the Zhang Zuolin's Fengtian Clique proclaimed itself an independent republican government with sole legitimate rule of all China. Following the promulgation of an Imperial Ordinance ordering “the development of Fengtian into an independent nation possessing indivisible relations with the Japanese Empire" a year later, the Manchurian economy was gradually influenced with an intent to strengthen control over its government and prepare it to support the Imperial war machine. As a result, Japan maintains a great deal of influence over Fengtian, further reinforced by garrisons and an occupation zone. \n\n The core of Japanese efforts was the South Manchuria Railway Company, or “Mantetsu” for short, which had already been operating in Manchuria since 1906. While a powerful symbol of Japanese interests in China prior to the intervention, the company has since become responsible for developing and exploiting virtually every important aspect of the Manchurian economy, propelling Manchuria to become Japan’s primary source of coal and steel, as well as the producer of over half the world’s soybean supply. Today, Mantetsu has announced its highest profits to date."
 japfor.1.a:0 "Great!"
 
 japfor.2.t:0 "Economic Exploitation of Fengtian is no longer possible"
