--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -1023,27 +1023,77 @@ ARG_jet_fighter_equipment_1_short:0 "Pulqui I"
 ARG_jet_fighter_equipment_2:0 "FMA IAe 33 Pulqui II"
 ARG_jet_fighter_equipment_2_short:0 "Pulqui II"
 
-### Belgium ###
+### Flanders-Wallonia ###
 
-BEL_fighter_equipment_0:0 "Avions Fairey Firefly"
-BEL_fighter_equipment_0_short:0 "Av-F. Firefly"
-BEL_fighter_equipment_1:0 "Avions Fairey Fantôme"
+BEL_fighter_equipment_0:0 " Fairey Fox"	#-> If we keep Fairey otherwise maybe change to "SEGA Renard" but that would be confusing with Alfred Renard	
+BEL_fighter_equipment_0_short:0 " Fox"
+BEL_fighter_equipment_1:0 "Fairey Fantôme" #-> If we keep Fairey otherwise "Sega Fantôme"
 BEL_fighter_equipment_1_short:0 "Fantôme"
-BEL_fighter_equipment_2:0 "Renard R.36"
-BEL_fighter_equipment_2_short:0 "R.36"
-
-BEL_CAS_equipment_1:0 "Avions Fairey Battle"
-BEL_CAS_equipment_1_short:0 "Battle"
-BEL_CAS_equipment_2:0 "SABCA S.47"
-BEL_CAS_equipment_2_short:0 "S.47"
-
-BEL_tac_bomber_equipment_1:0 "LACAB GR.8"
-BEL_tac_bomber_equipment_1_short:0 "GR.8"
-BEL_tac_bomber_equipment_2:0 "Renard-PZL 37"
-BEL_tac_bomber_equipment_2_short:0 "R-PZL 37"
-
-BEL_jet_fighter_equipment_2:0 "SABCA Hunter"
-BEL_jet_fighter_equipment_2_short:0 "Hunter"
+#BEL_cv_fighter_equipment_1:0 "Hawker Sea Hurricane" 
+#BEL_cv_fighter_equipment_1_short:0 "Sea Hurricane"
+BEL_fighter_equipment_2:0 "Renard 38"
+BEL_fighter_equipment_2_short:0 "R-38"
+BEL_fighter_equipment_2_desc:0 "Revision of the R-36 prototype that crashed, leading to the annulation of the contract made with the Belgian army." 
+BEL_cv_fighter_equipment_2:0 "Renard 38 Aéronaval"
+BEL_cv_fighter_equipment_2_short:0 "R-38 AN" 
+#BEL_fighter_equipment_3:0 "Supermarine Spiteful"
+#BEL_fighter_equipment_3_short:0 "Spiteful" 
+#BEL_jet_fighter_equipment_1:0 "Gloster Meteor"
+#BEL_jet_fighter_equipment_1_short:0 "Meteor"  
+#BEL_jet_fighter_equipment_2:0 "Hawker Hunter"
+#BEL_jet_fighter_equipment_2_short:0 "Hunter"
+BEL_CAS_equipment_1:0 "Sabca-Caproni 47"
+BEL_CAS_equipment_1_short:0 "S.47"
+BEL_CAS_equipment_1_desc:0 "This close air support aircraft suffered in 1940 from an insufficent speed, making it an easy target, and an insufficient payload, making the destruction of the bridges of the Canal Albert impossible for the poor pilots assigned on those last chance missions." 
+BEL_CAS_equipment_2:0 "Renard 37 B 14N"
+BEL_CAS_equipment_2_short:0 "R-37 B"
+BEL_CAS_equipment_2_desc:0 "The Renard 37 B is a biplace variant of the R37 for ground attacks, as only a prototype of the fighter version was built, it stayed on paper and was never made."  
+BEL_cv_CAS_equipment_2:0 "Renard 37 B Aéronaval"
+BEL_cv_CAS_equipment_2_short:0 "R-37 B AN" 
+#BEL_CAS_equipment_3:0 "Hawker Tempest"
+#BEL_CAS_equipment_3_short:0 "Tempest"
+#BEL_cv_fighter_equipment_3:0 "Hawker Sea Fury"
+#BEL_cv_fighter_equipment_3_short:0 "Sea Fury" 
+#BEL_nav_bomber_equipment_1:0 "Fairey Swordfish"
+#BEL_nav_bomber_equipment_1_short:0 "Swordfish" 
+#BEL_cv_nav_bomber_equipment_1:0 "Fairey Swordfish Aéronaval"
+#BEL_cv_nav_bomber_equipment_1_short:0 "Swordfish AN"  
+BEL_nav_bomber_equipment_2:0 "Renard 37 Défense Côtière"
+BEL_nav_bomber_equipment_2_short:0 "R-37 DC"
+BEL_cv_nav_bomber_equipment_2:0 "Renard 37 Aéronaval"
+BEL_cv_nav_bomber_equipment_2_short:0 "R-37 DC AN"  
+BEL_nav_bomber_equipment_2_desc:0 "First revision of the R36 prototype, the Renard 37 only existed on paper. But there is a 'défense côtière' (coastal defence) version among the plans."
+#BEL_nav_bomber_equipment_3:0 "Fairey Barracuda"
+#BEL_nav_bomber_equipment_3_short:0 "Barracuda" 
+#BEL_heavy_fighter_equipment_1:0 "Potez 630" -> French but some assembled by Fairey
+#BEL_heavy_fighter_equipment_1_short:0 "Potez 630"
+BEL_heavy_fighter_equipment_3:0 "Renard 42"
+BEL_heavy_fighter_equipment_3_short:0 "R-42"
+BEL_heavy_fighter_equipment_3_desc:0 "The R-42 is a twin fighter long range variant of the R-36 and subsequent designs (R-38, R-40), an idea later developped in the american F-82 Twin Mustang. Due to the war it was only sketched." 
+#BEL_heavy_fighter_equipment_2:0 "Breguet 690"
+#BEL_heavy_fighter_equipment_2_short:0 "Bre 690"
+BEL_tac_bomber_equipment_0:0 "LACAB GR.8" -> Level 0 not level 1
+BEL_tac_bomber_equipment_0_short:0 "GR.8"
+BEL_tac_bomber_equipment_0_desc:0 "The GR.8, nicknamed 'Doryphore' (meaning 'Potato Bug' because of its poor flying capabilities) was made in order to serve as a multiprupose aircraft for the Belgian air force. Supposed to serve as a bomber, a reconnaisance aircraft and a heavy fighter it followed the ludicrous demands of the Belgian army to the letter...and was consequently bad in all of those roles."   
+BEL_tac_bomber_equipment_1:0 " SABCA S.45"
+BEL_tac_bomber_equipment_1_short:0 " SABCA S.45" 
+BEL_tac_bomber_equipment_1_desc:0 "The SABCA S.45 is a licence built Caproni Ca.135 to enable a greater production of planes than Italy's limited capabilities. With this experience in bomber building the Belgian could have easily built more of those for their own use, but they never did." 
+#BEL_tac_bomber_equipment_2:0 "Bristol Beaufort"
+#BEL_tac_bomber_equipment_2_short:0 "Beaufort"
+#BEL_tac_bomber_equipment_3:0 "de Havilland Mosquito B"
+#BEL_tac_bomber_equipment_3_short:0 "Mosquito B"
+#BEL_jet_tac_bomber_equipment_1:0 "de Havilland Venom"
+#BEL_jet_tac_bomber_equipment_1_short:0 "Venom"
+#BEL_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
+#BEL_jet_tac_bomber_equipment_2_short:0 "Canberra" 
+#BEL_strat_bomber_equipment_1:0 "Handley Page Halifax"
+#BEL_strat_bomber_equipment_1_short:0 "Halifax"
+#BEL_strat_bomber_equipment_2:0 "Avro Lancaster"
+#BEL_strat_bomber_equipment_2_short:0 "Lancaster"
+#BEL_strat_bomber_equipment_3:0 "Avro Lincoln"
+#BEL_strat_bomber_equipment_3_short:0 "Lincoln"
+#BEL_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
+#BEL_jet_strat_bomber_equipment_1_short:0 "Valiant" 
 
 ### Bulgarian ###
 
