lots of fixes for Russia and some others for annexations, nat france, soviets, white ruthenia (finally it will revolt for real) and news events now don't fire for their home country in certain cases
also brought back the russian icons from 2 months in the past

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -178,7 +178,8 @@ annex.57.a:0 "The Kingdom of Italy will have an Hapsburg King!"
 annex.58.t:0 "The rebirth of the Italian Federation"
 annex.58.d:0 "The Austrians decided to recreate our nation, with an Hapsburg as our new king."
 annex.59.t:0 "Fate of Portugal"
-annex.59.d:0 "Portugal is under our control, but perhaps the Spanish would be better to govern it themselves?"
+annex.59.d_spanish_friend:0 "Portugal is under our control, but perhaps the Spanish would be better to govern it themselves?"
+annex.59.d_normal:0 "Portugal is under our control, but perhaps the Portuguese would be better off governing themselves?"
 annex.59.a:0 "Give it to our Spanish comrades"
 annex.59.b:0 "Liberate a Socialist Portugal"
 annex.59.c:0 "Its better to occupy them!"
