--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -180,7 +180,7 @@ NFA_monarch_prestige:0 "Idealised Sovereign"
 NFA_monarch_prestige_desc:0 "Our monarch is a great, liberal and strong sovereign. At least that's what the people should be thinking after we have 'convinced' them."
 NFA_strenghthened_governement:0 "Reinforced Government"
 NFA_strenghthened_governement_desc:0 "The government is now stronger and can prepare the people for the upcoming war."
-NFA_strenghthened_governement_tooltip:0 "§GYou will receive a special modifier according to your political choices.§! \n"
+NFA_strenghthened_governement_tooltip:0 "§GYou will receive a special modifier according to your political choices except if you are absolutist.§! \n"
 
 NFA_homeland_reconquest:0 "Preparing the Libération"
 NFA_homeland_reconquest_desc:0 "The Commune is preparing for war against Germany and so should we prepare too. The Libération will come only if we can take advantage of all opportunites that come."
