Russian ind tree balanced

--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -283,6 +283,10 @@ soviet_worker_soldier:0 "Soviet Threat"
 soviet_worker_soldier_desc:0 "The continuing instability and the strength of the red influence has forced us to compromise with the proletariat after the civil war. Bolshevik activity is still high in Russia and in the case of a further weakening of our power they might attempt to rise up again."
 rus_military_spirit_idea:0 "Military Spirit"
 RUS_anti_bolshevik_idea:0 "Anti-Bolshevik Policies"
+rus_sav_econ:0 "Economy for the army"
+rus_sav_econ_desc:0 "Though Savinkov's government started to revive our economy, but the military factories get more attention than the others. Many people are not satisfied with such a policy."
+rus_sav_econ1:0 "Nation and Army stay together!"
+rus_sav_econ1_desc:0 "We could finally reorganize our economy, including the civil industry, but the stabilization of the economy will take some time."
 
 ### Parties ###
 RUS_totalist_party:0 "NOP"
