Spelling fixes all round

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -457,7 +457,7 @@ TRM_Arm_Commando:0 "Expand Special Forces"
 TRM_Arm_Inf1:0 "Modernise Equipment"
 TRM_Arm_Inf2:0 "Northern Expansion"
 TRM_Arm_Inf3:0 "Equipment Breakthrough"
-TRM_Arm_Mot:0 "Motarisation Effort"
+TRM_Arm_Mot:0 "Motorisation Effort"
 TRM_Arm_Arm:0 "Expand Dalzavod Facilities"
 TRM_Air_Planes:0 "Found a Vladivostok Airfleet"
 TRM_Air_Fighters:0 "Fighters Effort"
