--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -594,7 +594,7 @@ fengtian.new.41.d:0 "The third and final Hiroshima Package has arrived, containi
 fengtian.new.41.a:0 "Good"
 #Soy Agricultural Initiative#
 fengtian.new.42.t:0 "The Soy Agricultural Initiative"
-fengtian.new.42.d:0 ""Soybeans are an extremely flexible crop, useful for human food, animal feed, fertilizer, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivize the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits.""
+fengtian.new.42.d:0 ""Soybeans are an extremely flexible crop, useful for human food, animal feed, fertiliser, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivise the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits.""
 fengtian.new.42.a:0 "Back the Initiative"
 fengtian.new.42.b:0 "We need no more soy"
 fengtian.new.43.t:0 "Japan and Korea Struggle with Drought"
@@ -606,7 +606,7 @@ fengtian.new.44.t:0 "Food departs for Korea"
 fengtian.new.44.d:0 "With Japan's proposal accepted, provisions are leaving from Yingkow for Incheon and other ports in Korea, as well as along the Anfeng and Gyeongui lines to Pyongyang. While starvation has yet to occur, it's difficult to portray the shipments leaving China's shores as anything other than an act of subservience to the Japanese."
 fengtian.new.44.a:0 "We will endure"
 fengtian.new.45.t:0 "The Industrial Soy Proposal"
-fengtian.new.45.d:0 "In light of the current anti-drought measures which have resulted in low provisions across Fengtian and considerable public upset, some government ministers have proposed cutting production of industrial soy, thus providing sufficient food but hanidcapping our civilian industry and some exports until the crisis is resolved."
+fengtian.new.45.d:0 "In light of the current anti-drought measures which have resulted in low provisions across Fengtian and considerable public upset, some government ministers have proposed cutting production of industrial soy, thus providing sufficient food but handicapping our civilian industry and some exports until the crisis is resolved."
 fengtian.new.45.a:0 "Cut Industrial Soy"
 fengtian.new.45.b:0 "We cannot afford this"
 fengtian.new.46.t:0 "The Drought Ends"
