Should be better now.

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -460,9 +460,9 @@ TRM_Arm_Inf3:0 "Equipment Breakthrough"
 TRM_Arm_Mot:0 "Motorisation Effort"
 TRM_Arm_Arm:0 "Expand Dalzavod Facilities"
 TRM_Air_Planes:0 "Found a Vladivostok Airfleet"
-TRM_Air_Fighters:0 "Fighters Effort"
+TRM_Air_Fighter:0 "Fighter Effort"
 TRM_Air_CAS:0 "CAS Effort"
-TRM_Air_Bombers:0 "Bombers Effort"
+TRM_Air_Bomber:0 "Bomber Effort"
 TRM_Air_Doc:0 "Modernise HQ"
 TRM_Air_Para:0 "Vladivostok Airbornes"
 TRM_Air_Bases_Vlad:0 "Expand Vladivostok Airbases"
