--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -60,6 +60,8 @@ SWE_SENREF_indoctrination:0 "Indoctrination"
 SWE_SENREF_indoctrination_desc:0 "Our citizens are being raised up to be efficient killing machines of the state. This comes at the expense of free thought, and innovation is slowing down. This is, of course, a small trade-off that we have to pay in order to get a top-quality army."
 SWE_SENREF_fanaticism:0 "Fanatic Nationalism"
 SWE_SENREF_fanaticism_desc:0 "Each and every one of our citizens will happily give their lives for our country."
+SWE_SENREF_slavery:0 "Serfdom"
+SWE_SENREF_slavery_desc:0 "While not exactly slavery, this is about as close as it gets. Serfs are forced to work for nothing else than substinence, effectively making them slaves on their lords estate, working the land in exchange for very little in return."
 
 ### Old Ideas ###
 
@@ -277,7 +279,7 @@ SWE_SENREF_POP3:0 "Stratocracy"
 SWE_SENREF_POP3_desc:0 "The military must take over all government duties. Only the most decisive and loyal of our countrymen should be allowed to assume leadership roles within our nation. Glory to Sweden."
 SWE_SENREF_STATARE1:0 "Abolish Statare"
 SWE_SENREF_STATARE1_desc:0 "Statare is basically a form of modern slavery. How can we pretend to be a nation of equal opportunite while such travesties are allowed to occur on our soil?"
-SWE_SENREF_STATARE2:0 "Legalize Slavery"
+SWE_SENREF_STATARE2:0 "Legalize Human Ownership"
 SWE_SENREF_STATARE2_desc:0 "Some say that Statare is tantamount to slavery. Maybe it is, but is there really anything wrong with that?"
 
 SWE_SENREF_DOCTRINE:0 "ÖB"
