--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -165,7 +165,7 @@ kr.political.33.d:0 "If you don't like Kaiserreich, why are you here?"
 kr.political.33.a:0 "That is a very good question..."
 
 kr.political.34.t:0 "Q&A"
-kr.political.34.d:0 "Should I play with historical focus on or off? \nWhile it shouldn't make any difference, we recommend you play with it on.\n\nHow come I can't puppet anything?\nAll puppetting is now done via events or foci rather than through peace conferences.\n\nWhen will the next patch come out?\nWe try for one big release every two months, and of course hot-fixes wherever needed."
+kr.political.34.d:0 "Should I play with historical focus on or off?\nWhile it shouldn't make any difference, we recommend you play with it on.\n\nHow come I can't puppet anything?\nAll puppetting is now done via events or foci rather than through peace conferences.\n\nWhen will the next patch come out?\nWe try for one big release every two months, and of course hot-fixes wherever needed.\n\nWhy are some of the models black/?\nWe use some DLC assets in our mod, so if you don't have that DLC, you will get blank textures, don't worry though, they are just cosmetic errors."
 kr.political.34.a:0 "Thanks for all the help!"
 
 kr.political.28.t:0 "News Events"
