More progress on South Africa, mostly the hooks after the CW

--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -177,10 +177,28 @@ SAF_prepare_overseas_offensive_mod_desc:0 "With miles of coastline, South Africa
 SAF_strengthen_the_cape_garrison_artillery_mod:0 "Strengthen the Cape Garrison Artillery"
 SAF_strengthen_the_cape_garrison_artillery_mod_desc:0 "The Cape Garrison guns must be upgraded and increased to protect the Cape from enemy attack. No enemies shall set a foot on the Cape!"
 
+### CW and Post-CW Focus ###
+
+SAF_1938_elections:0 "The 1938 General Elections"
+SAF_1938_elections_tt:0 "We will get access to major internal and diplomatic reforms and stances once the '§Y1938 General Elections§!' take place and a new party and ideology is chosen to lead South Africa forwards. Pending any inconveniences, that is."
+SAF_1938_elections_desc: "Scheduled to take place in May of 1938, the South African General Elections will probably be the most polarized our country has ever seen, with two radically different views of our country's future in play. The stakes are high, as whoever wins will choose the path forward, and there are no obvious favourites yet."
+
+SAF_nationalist_reform:0 "The Apartheid Process"
+SAF_nationalist_reform_desc:0 "The victory of the Nationalists in the 1938 Elections also implies the victory of all the ideas that had since sat on the fringes of the ruling party. At the center of it all, the concept of the Apartheid calls for the separation of races. This will have to be done quickly and decivisely, before the Coloured and their British allies get any ideas."
+
+SAF_dominionist_reform:0 "The Port Elisabeth Declaration"
+SAF_dominionist_reform_desc:0 "The victory of the Dominionists in the 1938 Elections also implies the victory of all the ideas that had since been struck out of the Afrikaner-dominated government. At the center of it all, the hope of repairing what is seen as the historical mistake of betraying the British. No small moves or diplomatic niceties will suffice, but the Afrikaners might not take it lightly"
+
+SAF_implement_apartheird:0 "Implementing the Apartheid"
+SAF_implement_apartheird_desc:0 "After a period of consolidation, we are now in a position to strengthen existing segregation laws to bring about full separation of the four South African nations both socially and politically. The Volksraad is behind us and set to carry our governments program through."
+
 ### Ideas ###
 
 racial_segregation:0 "Racial Segregation"
 racial_segregation_desc:0 "South Africa is a divided nation. While the vast majority of the population belong to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch speaking decedents of the original Dutch colonists and the Boers who settled the Transvall and Orange Free State, and the British, who form the majority of the white population in Natal and Rhodesia."
+
+racial_segregation_apartheid:0 "Apartheid"
+racial_segregation_apartheid_desc:0 "South Africa is a divided nation. While the vast majority of the population belong to the various native ethnic African groups, socio-economic power is held by the white European minority. The recent implemention of the Apartheird has excarberated tensions, but has also allowed the state to brutally expand its conscription, along with the need for a larger law enforcement force."
 
 paramount_chiefs:0 "Paramount Chiefs"
 paramount_chiefs_desc:0 "We have left a great deal of autonomy to the newly integrated HCT regions. This and the goodwill of the new Paramount Chiefs ensures political and economical stability in the Native lands for the years to come."
@@ -234,6 +252,10 @@ SAF_WORK_PROGRAMS:0 "Has focused economic recovery on work programs for the unem
 SAF_INDUSTRIALIZE:0 "Has focused economic recovery on rapid industrialisation"
 SAF_LIBERALIZE:0 "Has focused economic recovery on liberalisation and trade with the Entente"
 SAF_BLACK_MONDAY_CLEARED:0 "Has resolved the Black Monday crisis"
+SAF_1938_ELECTIONS:0 "The 1938 Elections have taken place"
+SAF_NAT_WIN:0 "The Nationalists won the 1938 General Election"
+SAF_DOM_WIN:0 "The Dominionists won the 1938 General Election"
+SAF_COUNTRY_STABLE:0 "Our country is stable enough to pass major reforms"
 
 ### Misc ###
 
@@ -327,12 +349,10 @@ SACW.2.b:0 "The Dominion Party Wins."
 SACW.3.t:0 "Implementing the Apartheid"
 SACW.3.d:0 "The National Party has seen off the challenge by Smut's pro-British Dominionists. However, the election was dangerously close, the Nationalists only having a razor thin majority in the Volksraad. One of the more noticable outcomes of the election was that the Natives elected Dominionist representatives and the Coloured vote was overwhelmingly pro-British.\n\nThe hawks on the right wing of our majority are warning that we should move immediately to sever the political ties between the races in the Union of South Africa once and for all by finally bringing the Apartheid into existence. However, the atmosphere is very tense and any harsh moves could very well be met by determined resistance from our political opposition."
 SACW.3.a:0 "Begin the process of Apartheid!"
-SACW.3.b:0 "Now is not the time."
 
 SACW.4.t:0 "Implementing the Port Elizabeth Declaration"
 SACW.4.d:0 "The Dominion Party has finally defeated Cronje's pro-Afrikaner Nationalist Party and gained control of the Volksraad. However, the election was dangerously close, the Dominionist only having a razor thin majority in the Volksraad. While gains were limited in Afrikaner-dominated areas, Native and Coloured voters have overwhelmingly endorsed our proposed federal model.\n\nOur representatives recommend that we use their support to push ahead now and declare the end of the old Union and the start of the new South African Federation. However, the atmosphere is very tense, and we might want to wait until the climate is less hostile, as any harsh move now could very be met with determined resistance from our political opposition."
 SACW.4.a:0 "Declare the start of a new Federation!"
-SACW.4.b:0 "Implement change gradually."
 
 SACW.5.t:0 "Construction of the Voortrekker Monument"
 SACW.5.d:0 "Begun in 1935, the construction of the Voortrekker Monument is nearing completion. Situated in Pretoria, it commemorates the Voortrekkers who left the Cape Colony between 1835 and 1854 to found the Afrikaner Republics of the interior. Costs, however, continue to grow, but we are on schedule to open the Monument at the Centenary celebrations next year."
@@ -505,3 +525,7 @@ SACW.43.a:0 "Great!"
 SACW.44.t:0 "The End of the Fourth Boer War"
 SACW.44.d:0 "For good or ill, the Fourth Boer War is now over."
 SACW.44.a:0 "Great!"
+
+SACW.45.t:0 "South Africa Stabilizes"
+SACW.45.d:0 "With the worst of times over, we can finally to claim to have full control over the country. An eery calm reigns over South Africa, and we finally stand proud and victorious. It is time to get our reforms underway, and prevent our country from descending into chaos and anarchy again."
+SACW.45.a:0 "No time to waste!"
