--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -189,8 +189,12 @@ SAF_nationalist_reform_desc:0 "The victory of the Nationalists in the 1938 Elect
 SAF_dominionist_reform:0 "The Port Elisabeth Declaration"
 SAF_dominionist_reform_desc:0 "The victory of the Dominionists in the 1938 Elections also implies the victory of all the ideas that had since been struck out of the Afrikaner-dominated government. At the center of it all, the hope of repairing what is seen as the historical mistake of betraying the British. No small moves or diplomatic niceties will suffice, but the Afrikaners might not take it lightly"
 
-SAF_implement_apartheird:0 "Implementing the Apartheid"
+SAF_implement_apartheird:0 "Implement the Apartheid"
 SAF_implement_apartheird_desc:0 "After a period of consolidation, we are now in a position to strengthen existing segregation laws to bring about full separation of the four South African nations both socially and politically. The Volksraad is behind us and set to carry our governments program through."
+
+SAF_implement_federation:0 "Implement the Federation"
+SAF_implement_federation_desc:0 "While we have been calling ourserves the South African Federation for a while, we have not yet implemented all the reforms we needed to make that change official. With the country stabilized and our opposition beaten, we can now move and rewrite the Constitution. The Union is no more, but South Africa lives on."
+
 
 ### Ideas ###
 
@@ -255,7 +259,7 @@ SAF_BLACK_MONDAY_CLEARED:0 "Has resolved the Black Monday crisis"
 SAF_1938_ELECTIONS:0 "The 1938 Elections have taken place"
 SAF_NAT_WIN:0 "The Nationalists won the 1938 General Election"
 SAF_DOM_WIN:0 "The Dominionists won the 1938 General Election"
-SAF_COUNTRY_STABLE:0 "Our country is stable enough to pass major reforms"
+SAF_CALM_RETURNS:0 "Our country is stable enough to pass major reforms"
 
 ### Misc ###
 
