come on and slam, and welcome to Japan

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2273,36 +2273,36 @@ ITA_totalist:0 "Italian Republic"
 ITA_totalist_ADJ:0 "Italian"
 ITA_totalist_DEF:0 "The Italian Republic"
 
-JAP_authoritarian_democrat:0 "Japanese Empire"
+JAP_authoritarian_democrat:0 "Empire of Japan"
 JAP_authoritarian_democrat_ADJ:0 "Japanese"
-JAP_authoritarian_democrat_DEF:0 "The Japanese Empire"
-JAP_market_liberal:0 "Japanese Empire"
+JAP_authoritarian_democrat_DEF:0 "The Empire of Japan"
+JAP_market_liberal:0 "Empire of Japan"
 JAP_market_liberal_ADJ:0 "Japanese"
-JAP_market_liberal_DEF:0 "The Japanese Empire"
-JAP_national_populist:0 "Japanese Empire"
+JAP_market_liberal_DEF:0 "The Empire of Japan"
+JAP_national_populist:0 "Empire of Japan"
 JAP_national_populist_ADJ:0 "Japanese"
-JAP_national_populist_DEF:0 "The Japanese Empire"
-JAP_paternal_autocrat:0 "Japanese Empire"
+JAP_national_populist_DEF:0 "The Empire of Japan"
+JAP_paternal_autocrat:0 "Empire of Japan"
 JAP_paternal_autocrat_ADJ:0 "Japanese"
-JAP_paternal_autocrat_DEF:0 "The Japanese Empire"
-JAP_radical_socialist:0 "Japanese Socialist Republic"
+JAP_paternal_autocrat_DEF:0 "The Empire of Japan"
+JAP_radical_socialist:0 "Japan"
 JAP_radical_socialist_ADJ:0 "Japanese"
-JAP_radical_socialist_DEF:0 "The Japanese Socialist Republic"
-JAP_social_conservative:0 "Japanese Empire"
+JAP_radical_socialist_DEF:0 "Japan"
+JAP_social_conservative:0 "Empire of Japan"
 JAP_social_conservative_ADJ:0 "Japanese"
-JAP_social_conservative_DEF:0 "Japanese Empire"
-JAP_social_democrat:0 "Japanese Empire"
+JAP_social_conservative_DEF:0 "Empire of Japan"
+JAP_social_democrat:0 "Empire of Japan"
 JAP_social_democrat_ADJ:0 "Japanese"
-JAP_social_democrat_DEF:0 "The Japanese Empire"
-JAP_social_liberal:0 "Japanese Empire"
+JAP_social_democrat_DEF:0 "The Empire of Japan"
+JAP_social_liberal:0 "Empire of Japan"
 JAP_social_liberal_ADJ:0 "Japanese"
-JAP_social_liberal_DEF:0 "Japanese Empire"
-JAP_syndicalist:0 "Japanese Socialist Republic"
+JAP_social_liberal_DEF:0 "Empire of Japan"
+JAP_syndicalist:0 "Japan"
 JAP_syndicalist_ADJ:0 "Japanese"
-JAP_syndicalist_DEF:0 "The Japanese Socialist Republic"
-JAP_totalist:0 "Japanese Socialist Republic"
+JAP_syndicalist_DEF:0 "Japan"
+JAP_totalist:0 "Japan"
 JAP_totalist_ADJ:0 "Japanese"
-JAP_totalist_DEF:0 "The Japanese Socialist Republic"
+JAP_totalist_DEF:0 "Japan"
 
 LAO_authoritarian_democrat:0 "Kingdom of Laos"
 LAO_authoritarian_democrat_ADJ:0 "Laotian"
