--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -590,7 +590,7 @@ STATE_587:0 "Fort Alexandrovsky"
 STATE_588:0 "Pavlodar"
 STATE_589:0 "Alma-Ata"
 STATE_590:0 "Akmolinsk"
-STATE_591:0 "Hainan"
+STATE_591:0 "Qiongya"
 STATE_592:0 "Guangzhou"
 STATE_593:0 "Guangdong"
 STATE_594:0 "Nanning"
