Southeast Asia renaming events Part 1

--- a/localisation/KR_Strategic_region_names_l_english.yml
+++ b/localisation/KR_Strategic_region_names_l_english.yml
@@ -71,7 +71,7 @@ STRATEGICREGION_69:0 "Eastern Mediterranean Sea"
 STRATEGICREGION_70:0 "Caspian Sea"
 STRATEGICREGION_71:0 "East Indian Ocean"
 STRATEGICREGION_72:0 "Straits of Malacca"
-STRATEGICREGION_73:0 "Gulf of Thailand"
+STRATEGICREGION_73:0 "Gulf of Siam" #Gulf of Thailand
 STRATEGICREGION_74:0 "South East Indian Ocean"
 STRATEGICREGION_75:0 "South China Sea"
 STRATEGICREGION_76:0 "East China Sea"
