Replacing German puppet cosmetic tags part 2

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1787,6 +1787,30 @@ TRV_PRF_subject:0 "Travancore-Cochin"
 TRV_PRF_subject_DEF:0 "Travancore-Cochin"
 TRV_PRF_subject_ADJ:0 "Travancorean"
 
+MLY_GER_subject:0 "Sultanate of Malaya"
+MLY_GER_subject_DEF:0 "The Sultanate of Malaya"
+MLY_GER_subject_ADJ:0 "Malayan"
+
+MLY_GER_subject:0 "Kingdom of Sarawak"
+MLY_GER_subject_DEF:0 "Kingdom of Sarawak"
+MLY_GER_subject_ADJ:0 "Sarawakian"
+
+MLY_GER_subject:0 "Kingdom of Sarawak"
+MLY_GER_subject_DEF:0 "Kingdom of Sarawak"
+MLY_GER_subject_ADJ:0 "Sarawakian"
+
+CEY_GER_subject:0 "Freistaat Ceylon"
+CEY_GER_subject_ADJ:0 "Ceylonese"
+CEY_GER_subject_DEF:0 "Freistaat Ceylon"
+
+MAG_GER_subject:0 "Freistaat Madagaskar"
+MAG_GER_subject_ADJ:0 "Madagaskan"
+MAG_GER_subject_DEF:0 "Freistaat Madagaskar"
+
+MOR_GER_subject:0 "Freistaat Marokko"
+MOR_GER_subject_ADJ:0 "Marokkan"
+MOR_GER_subject_DEF:0 "Freistaat Marokko"
+
 ##############
 #Vanilla
 ##############
