--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2627,12 +2627,12 @@ MLY_authoritarian_democrat_DEF:0 "The Sultanate of Malaysia"
 MLY_market_liberal:0 "Federated States of Malaysia"
 MLY_market_liberal_ADJ:0 "Malay"
 MLY_market_liberal_DEF:0 "The Federated States of Malaysia"
-MLY_national_populist:0 "Sultanate of Johor"
+MLY_national_populist:0 "Neo-Srivijaya Empire"
 MLY_national_populist_ADJ:0 "Malay"
-MLY_national_populist_DEF:0 "The Sultanate of Johor"
-MLY_paternal_autocrat:0 "Neo-Srivijaya Empire"
+MLY_national_populist_DEF:0 "The Neo-Srivijaya Empire"
+MLY_paternal_autocrat:0 "Sultanate of Malaysia"
 MLY_paternal_autocrat_ADJ:0 "Malay"
-MLY_paternal_autocrat_DEF:0 "The Neo-Srivijaya Empire"
+MLY_paternal_autocrat_DEF:0 "The Sultanate of Malaysia"
 MLY_radical_socialist:0 "Socialist Republic of Malaya"
 MLY_radical_socialist_ADJ:0 "Malay"
 MLY_radical_socialist_DEF:0 "The Socialist Republic of Malaya"
