Fixing my own errors

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1791,13 +1791,9 @@ MLY_GER_subject:0 "Sultanate of Malaya"
 MLY_GER_subject_DEF:0 "The Sultanate of Malaya"
 MLY_GER_subject_ADJ:0 "Malayan"
 
-MLY_GER_subject:0 "Kingdom of Sarawak"
-MLY_GER_subject_DEF:0 "Kingdom of Sarawak"
-MLY_GER_subject_ADJ:0 "Sarawakian"
-
-MLY_GER_subject:0 "Kingdom of Sarawak"
-MLY_GER_subject_DEF:0 "Kingdom of Sarawak"
-MLY_GER_subject_ADJ:0 "Sarawakian"
+SAR_GER_subject:0 "Kingdom of Sarawak"
+SAR_GER_subject_DEF:0 "Kingdom of Sarawak"
+SAR_GER_subject_ADJ:0 "Sarawakian"
 
 CEY_GER_subject:0 "Freistaat Ceylon"
 CEY_GER_subject_ADJ:0 "Ceylonese"
