--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -1584,30 +1584,31 @@ IRE_modern_tank_equipment_1_desc:0 "With the production of the Morrigan main bat
 
 #Infantry equip
 
-OTT_infantry_equipment_0:0 "ATF M38"
-OTT_infantry_equipment_0_short:0 "Ankara ATF M38"
-OTT_infantry_equipment_0_desc:0 "Ankara ATF M38 rifle was Ottoman variant of Mauser Gewehr M98, the rifle that Ottomans imported from German Empire then later began its licenced production during and also after the Weltkrieg."
-OTT_infantry_equipment_1:0 "Kırıkkale Tüfeği 41"
-OTT_infantry_equipment_1_short:0 "Kırıkkale T-41"
-OTT_infantry_equipment_1_desc:0 "Kırıkkale T-41 Semi Automatic Rifle was based on the receiver of the Gewehr 41, the T-41 is issued with a lighter build and shortened stock, emphasising reliability and speed over range and accuracy. This rifle was widely in use across all branches of the service in the Ottoman Military."
-OTT_infantry_equipment_2:0 "Makina Kimya Endüstrisi Makinalı Tabanca 42"
-OTT_infantry_equipment_2_short:0 "MKEK MakTab-42"
-OTT_infantry_equipment_3:0 "Yıldıray 44"
-OTT_infantry_equipment_3_short:0 "YDR-44"
+OTT_infantry_equipment_0:0 "Mauser G98 M1903"
+OTT_infantry_equipment_0_short:0 "Mauser G98"
+OTT_infantry_equipment_0_desc:0 "Mauser G98 was the main service rifle of the Ottoman Army during the Weltkrieg. The Ottoman M1903, chambered in 7.65mm, was the most common variant of Mauser in use. Pronounced 'Mavzer' by the Ottomans, this iconic rifle achieved great fame and became deeply ingrained in the Turkish subconscious. \n'One side of me withered from sorrows / the other from a Mavzer wound'"
+OTT_infantry_equipment_1:0 "Ankara ATF M38"
+OTT_infantry_equipment_1_short:0 "ATF M38"
+OTT_infantry_equipment_1_desc:0 "Ankara ATF M38 was the name given to the Ottoman modification of Mauser Gewehr 98. Starting in 1933, the Ottoman Empire updated their old rifles to a common configuration known as the Model of 1338 and all in 8x57 Mauser cartridge. The standardisation of all Mausers in Ottoman inventory helped ease the logistical nightmare of having to supply 4 different types of rifle ammunition to all units."
+OTT_infantry_equipment_2:0 "Kırıkkale T-60"
+OTT_infantry_equipment_2_short:0 "T-60"
+OTT_infantry_equipment_2_desc:0 "Kırıkkale T-60 Semi Automatic Rifle was based on the receiver of the Gewehr 41, the T-60 is issued with a lighter build and shortened stock, emphasising reliability and speed over range and accuracy. This rifle saw wide use across all branches of service in the Ottoman Military."
+OTT_infantry_equipment_3:0 "Yıldıray 64"
+OTT_infantry_equipment_3_short:0 "YDR-64"
 
 #Motorised
 
 OTT_motorized_equipment_1:0 "Opel Şimşek"
 OTT_motorized_equipment_1_short:0 "Opel Şimşek"
-OTT_mechanized_equipment_1:0 "Özel Motorlu Araba 12"
-OTT_mechanized_equipment_1_short:0 "ÖMotA 12"
-OTT_mechanized_equipment_1_desc:0 "The ÖMotA 12 (Özel Motorlu Araba - Special Motorised Vehicle) was a German inspired half-track that saw very widespread use in Arab Revolt. It could carry eight troops in addition to towing a gun or trailer."
-OTT_mechanized_equipment_2:0 "Özel Motorlu Araba 255"
-OTT_mechanized_equipment_2_short:0 "ÖMotA 255"
-OTT_mechanized_equipment_2_desc:0 "The ÖMotA 255 half-track was an armoured fighting vehicle designed and built by the Uzel company during 2nd Weltkrieg, based on the German Sd.Kfz. 251 vehicle."
-OTT_mechanized_equipment_3:0 "Özel Motorlu Araba 255/24"
-OTT_mechanized_equipment_3_short:0 "ÖMotA 255/24"
-OTT_mechanized_equipment_3_desc:0 "An updated version of the ÖMotA 255 fitted with an Baykuş 360 K2 infrared spotlight."
+OTT_mechanized_equipment_1:0 "Muhassas Paletli Araba 358"
+OTT_mechanized_equipment_1_short:0 "MPA 358"
+OTT_mechanized_equipment_1_desc:0 "The MPA 358 (Muhassas Paletli Araba - Special Tracked Vehicle) was a German inspired half-track that saw widespread use in the suppression of Arabian revolts. It could carry eight troops in addition to towing a gun or trailer."
+OTT_mechanized_equipment_2:0 "Muhassas Paletli Araba 361"
+OTT_mechanized_equipment_2_short:0 "MPA 361"
+OTT_mechanized_equipment_2_desc:0 "The MPA 361 half-track was an armoured fighting vehicle designed and built by the Uzel company during the 2nd Weltkrieg, based on the German Sd.Kfz.251 vehicle."
+OTT_mechanized_equipment_3:0 "Muhassas Paletli Araba 361/24"
+OTT_mechanized_equipment_3_short:0 "MPA 361/24"
+OTT_mechanized_equipment_3_desc:0 "An updated version of the MPA 361 fitted with a F360-K2 'Baykuş' infrared spotlight."
 OTT_motorized_rocket_equipment_0:0 "U-29 Saz"
 OTT_motorized_rocket_equipment_0_short:0 "Saz"
 OTT_motorized_rocket_equipment_1:0 "U-34 Dombra"
@@ -1615,80 +1616,80 @@ OTT_motorized_rocket_equipment_1_short:0 "Dombra"
 
 #Artillery
 
-OTT_artillery_equipment_1:0 "Tophane Nu. 18/33"
-OTT_artillery_equipment_1_short:0 "Nu. 18/33"
-OTT_artillery_equipment_2:0 "Tophane Nu. 36/42"
-OTT_artillery_equipment_2_short:0 "Nu. 36/42"
-OTT_artillery_equipment_3:0 "Tophane Nu. 39/48"
-OTT_artillery_equipment_3_short:0 "Nu. 39/48"
+OTT_artillery_equipment_1:0 "Tophane Nu. 37/52"
+OTT_artillery_equipment_1_short:0 "Tophane 37/52"
+OTT_artillery_equipment_2:0 "Tophane Nu. 54/60"
+OTT_artillery_equipment_2_short:0 "Tophane 54/60"
+OTT_artillery_equipment_3:0 "Tophane Nu. 58/68"
+OTT_artillery_equipment_3_short:0 "Tophane 58/68"
 
-OTT_anti_tank_equipment_1:0 "Tophane-Kırıkkale Tanksavar Tas 35"
-OTT_anti_tank_equipment_1_short:0 "Tas 35"
-OTT_anti_tank_equipment_2:0 "Tophane-Kırıkkale Tanksavar Tas 41"
-OTT_anti_tank_equipment_2_short:0 "Tas 41"
-OTT_anti_tank_equipment_3:0 "Tophane-Kırıkkale Tanksavar Tas 44"
-OTT_anti_tank_equipment_3_short:0 "Tas 44"
+OTT_anti_tank_equipment_1:0 "Tophane-Kırıkkale Tanksavar 53"
+OTT_anti_tank_equipment_1_short:0 "TAS 53"
+OTT_anti_tank_equipment_2:0 "Tophane-Kırıkkale Tanksavar 60"
+OTT_anti_tank_equipment_2_short:0 "TAS 60"
+OTT_anti_tank_equipment_3:0 "Tophane-Kırıkkale Tanksavar 64"
+OTT_anti_tank_equipment_3_short:0 "TAS 64"
 
-OTT_anti_air_equipment_1:0 "Kırıkkale-MKEK 30mm Kuşçu Uçaksavar"
+OTT_anti_air_equipment_1:0 "MKE 30mm Kuşçu Tayyare Topu"
 OTT_anti_air_equipment_1_short:0 "30mm Kuşçu"
-OTT_anti_air_equipment_2:0 "Kırıkkale-MKEK 60mm Kuşçu Uçaksavar"
+OTT_anti_air_equipment_2:0 "MKE 60mm Kuşçu Tayyare Topu"
 OTT_anti_air_equipment_2_short:0 "60mm Kuşçu"
-OTT_anti_air_equipment_3:0 "Kırıkkale-MKEK 90mm Kuşçu Uçaksavar"
+OTT_anti_air_equipment_3:0 "MKE 90mm Kuşçu Tayyare Topu"
 OTT_anti_air_equipment_3_short:0 "90mm Kuşçu"
 
-OTT_rocket_artillery_equipment_1:0 "Tophane-MKEK Roket Havanı RH 40"
-OTT_rocket_artillery_equipment_1_short:0 "RH 40"
-OTT_rocket_artillery_equipment_2:0 "Tophane-MKEK Roket Havanı RH 42"
-OTT_rocket_artillery_equipment_2_short:0 "RH 42"
+OTT_rocket_artillery_equipment_1:0 "Tophane-MKE Roket Havanı RH 58"
+OTT_rocket_artillery_equipment_1_short:0 "RH 58"
+OTT_rocket_artillery_equipment_2:0 "Tophane-MKE Roket Havanı RH 61"
+OTT_rocket_artillery_equipment_2_short:0 "RH 61"
 
 #Tanks
 
 OTT_gw_tank_equipment:0 "Muharebe Tankı 18"
 OTT_gw_tank_equipment_short:0 "MT-18"
-OTT_gw_tank_equipment_desc:0 "During the Weltkrieg, Ottoman army captured Mark II and FT-17 tanks then refitted them into their service, dubbing them as 'II. Kalıb' and 'MT-18'. After French forces surrendered in 1919, Ottoman Empire received quite a number of FT-17s as spoils of war. The MT-18 tank was popular among armoured corps. Though more advanced tanks replaced the MT-18 eventually, army still used these for training its tank crews."
-OTT_light_tank_equipment_1:0 "Muharebe Tankı 34 'Sekban'"
-OTT_light_tank_equipment_1_short:0 "MT-34 Sekban"
-OTT_light_tank_equipment_1_desc:0 "MT-34 Sekban project was the first attempt to reorganise and reform the Ottoman Armoured Corps that was in included Harb-i Yıldırım military reforms. The initial plan for MT-34 was to replace old MT-18s, however field tests proved MT-34 wasn't ready for the battlefield and concluded that further developments were needed."
-OTT_light_tank_equipment_2:0 "Muharebe Tankı 36 'Beylik'"
-OTT_light_tank_equipment_2_short:0 "MT-36 Beylik"
-OTT_light_tank_equipment_2_desc:0 "MT-36 Beylik was the second significant effort to modernise the Ottoman Armoured Corps. Errors and reliability problems of MT-34 were mostly fixed while adding additional modifications to cannon, hull and engine."
-OTT_light_tank_equipment_3:0 "I. Hafif ZMV"
-OTT_light_tank_equipment_3_short:0 "I. HZMV"
-OTT_light_tank_equipment_3_desc:0 "I. Hafif ZMV was lighter version of the II. ZMV. It was designed for scouting and flanking purposes."
-OTT_light_tank_artillery_equipment_1:0 "MT-34T Sekban Seyyar Topçu"
+OTT_gw_tank_equipment_desc:0 "During the Weltkrieg, Ottoman army captured Mark II and FT-17 tanks then refitted them into service, dubbing them 'Zırhlı II' and 'MT-18'. After French forces surrendered in 1919, Ottoman Empire received a large number of FT-17s as spoils of war. The MT-18 tank was popular among armoured corps. Though more advanced tanks replaced the MT-18 eventually, army still used these for training its tank crews."
+OTT_light_tank_equipment_1:0 "Muharebe Tankı 52 'Sekban'"
+OTT_light_tank_equipment_1_short:0 "MT-52 Sekban"
+OTT_light_tank_equipment_1_desc:0 "MT-52 Sekban project was the first attempt to reorganise and reform the Ottoman Armoured Corps that was included in Harb-i Yıldırım military reforms. The initial plan was to have the MT-52 to replace old MT-18s, however field tests proved that MT-52 wasn't ready for the battlefield and concluded that further development was needed."
+OTT_light_tank_equipment_2:0 "Muharebe Tankı 55 'Beylik'"
+OTT_light_tank_equipment_2_short:0 "MT-55 Beylik"
+OTT_light_tank_equipment_2_desc:0 "MT-55 Beylik was the second significant effort to modernise the Ottoman Armoured Corps. Errors and reliability problems of MT-52 were mostly fixed while additional modifications were made to the cannon, hull and engine."
+OTT_light_tank_equipment_3:0 "I. Hafif ZMV 'Tatar'"
+OTT_light_tank_equipment_3_short:0 "Tatar"
+OTT_light_tank_equipment_3_desc:0 "I. Hafif ZMV 'Tatar' was a lighter variant of the II. ZMV Uygur. It was designed for scouting and flanking purposes."
+OTT_light_tank_artillery_equipment_1:0 "MT-52T Sekban Seyyar Topçu"
 OTT_light_tank_artillery_equipment_1_short:0 "Sekban Seyyar Topçu"
-OTT_light_tank_artillery_equipment_2:0 "MT-36T Beylik Seyyar Topçu"
+OTT_light_tank_artillery_equipment_2:0 "MT-52T Beylik Seyyar Topçu"
 OTT_light_tank_artillery_equipment_2_short:0 "Beylik Seyyar Topçu"
 OTT_light_tank_artillery_equipment_3:0 "I. HZKMT Osmaniye"
 OTT_light_tank_artillery_equipment_3_short:0 "Osmaniye"
-OTT_light_tank_destroyer_equipment_1:0 "MT-34TS Sekban Seyyar Ciritçi"
+OTT_light_tank_destroyer_equipment_1:0 "MT-52TS Sekban Seyyar Ciritçi"
 OTT_light_tank_destroyer_equipment_1_short:0 "Sekban Seyyar Ciritçi"
-OTT_light_tank_destroyer_equipment_2:0 "MT-36TS Beylik Seyyar Ciritçi"
+OTT_light_tank_destroyer_equipment_2:0 "MT-55TS Beylik Seyyar Ciritçi"
 OTT_light_tank_destroyer_equipment_2_short:0 "Beylik Seyyar Ciritçi"
 OTT_light_tank_destroyer_equipment_3:0 "I. HZKMTS Sezercik"
 OTT_light_tank_destroyer_equipment_3_short:0 "Sezercik"
-OTT_light_tank_aa_equipment_1:0 "MT-34US Sekban Seyyar Kuşçu"
+OTT_light_tank_aa_equipment_1:0 "MT-52US Sekban Seyyar Kuşçu"
 OTT_light_tank_aa_equipment_1_short:0 "Sekban Seyyar Kuşçu"
-OTT_light_tank_aa_equipment_2:0 "MT-36US Beylik Seyyar Kuşçu"
+OTT_light_tank_aa_equipment_2:0 "MT-55US Beylik Seyyar Kuşçu"
 OTT_light_tank_aa_equipment_2_short:0 "Beylik Seyyar Kuşçu"
-OTT_light_tank_aa_equipment_3:0 "I. HZKMUS Tatar"
-OTT_light_tank_aa_equipment_3_short:0 "Tatar"
+OTT_light_tank_aa_equipment_3:0 "I. HZKMUS Tuva"
+OTT_light_tank_aa_equipment_3_short:0 "Tuva"
 
-OTT_medium_tank_equipment_1:0 "I. Zırhlı Muharebe Vasıtası"
-OTT_medium_tank_equipment_1_short:0 "I. ZMV"
-OTT_medium_tank_equipment_1_desc:0 "Appeared in Harb-i Yıldırım military reforms, the I. Zırhlı Muharebe Vasıtası (First Armored Battle Vehicle) is a bulkier version of MT-36. It had a thicker hull and also had improved cannon and armour designs. I. ZMV had lots of variants due to the fact that its chassis is easily upgradeable, thanks to Commissioner Fahrettin Türkan Pasha wanting its design and parts to be simple and easily interchangeable."
-OTT_medium_tank_equipment_2:0 "II. Zırhlı Muharebe Vasıtası"
-OTT_medium_tank_equipment_2_short:0 "II. ZMV"
-OTT_medium_tank_equipment_2_desc:0 "The II. ZMV medium tank is improved version of I. ZMV. It was intended for weathering the harshest conditions while having a decent combat efficiency. It had 7.7 cm ÇVT main armament and MakTüf 35 coaxial MGs. Experimental sloped armour and armoured skirts had also introduced in order to counter incoming enemy AT rounds."
-OTT_medium_tank_equipment_3:0 "III. Zırhlı Muharebe Vasıtası Altay"
+OTT_medium_tank_equipment_1:0 "I. Zırhlı Muharebe Vasıtası 'Uygur'"
+OTT_medium_tank_equipment_1_short:0 "Uygur"
+OTT_medium_tank_equipment_1_desc:0 "First proposed in the Harb-i Yıldırım military reforms, the I. Zırhlı Muharebe Vasıtası (First Armored Battle Vehicle) 'Uygur' is a bulkier version of MT-55. It had a thicker hull and also had improved cannon and armour design. I. ZMV had many variants thanks to the fact that its chassis was easily upgradeable, as demanded by Commissioner Ömer Fahrettin Pasha who wanted its design and parts to be simple and easily interchangeable."
+OTT_medium_tank_equipment_2:0 "II. Zırhlı Muharebe Vasıtası 'Kuman'"
+OTT_medium_tank_equipment_2_short:0 "Kuman"
+OTT_medium_tank_equipment_2_desc:0 "The II. ZMV 'Kuman' medium tank is an updated version of I. ZMV. It was intended to withstand the harshest conditions while retaining a decent combat efficiency. It had 7.7 cm ÇVT main armament and M35 coaxial MGs. Experimental sloped armour and armoured skirts were also introduced in an attempt to counter incoming enemy AT rounds."
+OTT_medium_tank_equipment_3:0 "III. Zırhlı Muharebe Vasıtası 'Altay'"
 OTT_medium_tank_equipment_3_short:0 "Altay"
-OTT_medium_tank_equipment_3_desc:0 "Altay is the common name of a medium tank deployed by Ottoman Empire during Second Weltkrieg and late stages of Second Arab Revolt. It was intended for standardising tank production, and as a replacement for the I. ZMV and II. ZMV. While never replacing the latter due to complex design, it served alongside it and the heavier Arslan tanks until the end of the war. The Germans dubbed the Altay Tank as 'Clausewitz Pasha' because of its design was heavily influenced by the German Panzerkampfwagen V von Clausewitz."
+OTT_medium_tank_equipment_3_desc:0 "Altay is the common name of a medium tank deployed by Ottoman Empire during Second Weltkrieg and late stages of Second Arab Revolt. It was intended for standardising tank production, and as a replacement for the I. ZMV and II. ZMV. While never replacing the latter due to complex design, it served alongside it and the heavier Arslan tanks until the end of the war. The Germans dubbed the Altay Tank 'Clausewitz Pasha' because its design was heavily influenced by the German Panzerkampfwagen V von Clausewitz."
 OTT_medium_tank_artillery_equipment_1:0 "I. ZKMT Cihadiye"
 OTT_medium_tank_artillery_equipment_1_short:0 "Cihadiye"
 OTT_medium_tank_artillery_equipment_1_desc:0 "I. Zırhlı Kundağı Motorlu Topçu Cihadiye is a self propelled medium artillery 125mm cannon mounted on a I. ZMV's chassis, I. ZKMT SPG packs respectable firepower while still being quite mobile."
 OTT_medium_tank_artillery_equipment_2:0 "II. ZKMT Mehmediye"
 OTT_medium_tank_artillery_equipment_2_short:0 "Mehmediye"
-OTT_medium_tank_artillery_equipment_2_desc:0 "Mehmediye is a SPG with improved 128mm cannon mounted on II. ZMV's chassis, Production started during early stages of Arab Revolt."
+OTT_medium_tank_artillery_equipment_2_desc:0 "Mehmediye is a SPG with improved 128mm cannon mounted on II. ZMV's chassis, production started during early stages of Arab Revolt."
 OTT_medium_tank_artillery_equipment_3:0 "III. ZKMT Hamidiye"
 OTT_medium_tank_artillery_equipment_3_short:0 "Hamidiye"
 OTT_medium_tank_artillery_equipment_3_desc:0 "Hamidiye is a prototype medium SPG on a Altay tank chassis, this advanced medium SPG that had good range and firepower. However due to complexity of its design, the Altay project needed to be abandoned along with the other variant types of it."
@@ -1696,17 +1697,17 @@ OTT_medium_tank_destroyer_equipment_1:0 "I. ZKMTS Tevfik"
 OTT_medium_tank_destroyer_equipment_1_short:0 "Tevfik"
 OTT_medium_tank_destroyer_equipment_2:0 "II. ZKMTS Kemal"
 OTT_medium_tank_destroyer_equipment_2_short:0 "Kemal"
-OTT_medium_tank_destroyer_equipment_3:0 "III. ZKMTS Cengiz"
-OTT_medium_tank_destroyer_equipment_3_short:0 "Cengiz"
+OTT_medium_tank_destroyer_equipment_3:0 "III. ZKMTS Selçuk"
+OTT_medium_tank_destroyer_equipment_3_short:0 "Selçuk"
 OTT_medium_tank_aa_equipment_1:0 "I. ZKMUS Yörük"
 OTT_medium_tank_aa_equipment_1_short:0 "Yörük"
-OTT_medium_tank_aa_equipment_1_desc:0 "I. Zırhlı Kundağı Motorlu Uçak Savar Yörük is medium SPAA developed during Harb-i Yıldırım military reforms. It was intended for escorting the armoured assault battalions against incoming enemy aircrafts also providing fire support to friendly forces if its necessary."
+OTT_medium_tank_aa_equipment_1_desc:0 "I. Zırhlı Kundağı Motorlu Tayyare Topu Yörük is medium SPAA developed during Harb-i Yıldırım military reforms. It was intended for escorting armoured assault battalions against incoming enemy aircraft, while also providing fire support to friendly forces if necessary."
 OTT_medium_tank_aa_equipment_2:0 "II. ZKMUS Çerkez"
 OTT_medium_tank_aa_equipment_2_short:0 "Çerkez"
-OTT_medium_tank_aa_equipment_2_desc:0 "Çerkez is a mobile anti-air artillery mounted on a II. ZMV's chassis. It's main armament consists of four 3cm Kuşçu AA guns on open turret and MakTüf 35 as coaxial MG."
+OTT_medium_tank_aa_equipment_2_desc:0 "Çerkez is a mobile anti-air artillery mounted on a II. ZMV chassis. It's main armament consists of four 30mm Kuşçu AA guns on open turret and M35 as coaxial MG."
 OTT_medium_tank_aa_equipment_3:0 "III. ZKMUS Türkmen"
 OTT_medium_tank_aa_equipment_3_short:0 "Türkmen"
-OTT_medium_tank_aa_equipment_3_desc:0 "Prototype SP anti air artillery that designed during Altay project. However project itself had to be cancelled due to its costly and complex design."
+OTT_medium_tank_aa_equipment_3_desc:0 "Prototype SP anti air artillery that was designed during Altay project. However project itself had to be cancelled due to its costly and complex design."
 
 OTT_heavy_tank_equipment_1:0 "AV-22 'Gazi'"
 OTT_heavy_tank_equipment_1_short:0 "Gazi"
@@ -1733,10 +1734,10 @@ OTT_heavy_tank_aa_equipment_2_short:0 "Arslan Seyyar Kuşçu"
 OTT_heavy_tank_aa_equipment_3:0 "AV-44US 'Azap Seyyar Kuşçu'"
 OTT_heavy_tank_aa_equipment_3_short:0 "Azap Seyyar Kuşçu"
 
-OTT_super_heavy_tank_equipment_1:0 "AAV-56 'Canavar'"
-OTT_super_heavy_tank_equipment_1_short:0 "Canavar"
-OTT_super_heavy_tank_artillery_equipment_1:0 "AAV-56T 'Sangal'"
-OTT_super_heavy_tank_artillery_equipment_1_short:0 "Sangal"
+OTT_super_heavy_tank_equipment_1:0 "AAV-56 'Sangal'"
+OTT_super_heavy_tank_equipment_1_short:0 "Sangal"
+OTT_super_heavy_tank_artillery_equipment_1:0 "AAV-56T 'Şahi'"
+OTT_super_heavy_tank_artillery_equipment_1_short:0 "Şahi"
 OTT_super_heavy_tank_destroyer_equipment_1:0 "AAV-56TS 'Tepegöz'"
 OTT_super_heavy_tank_destroyer_equipment_1_short: "Tepegöz"
 OTT_super_heavy_tank_aa_equipment_1:0 "AAV-56US 'Kumay'"
