Added some POL event pics.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -415,8 +415,8 @@ poland.5.a:0 "This is really bad!"
 poland.6.t:0 "Solutions for our immense problems"
 poland.6.d:0 "Now we face two crises, a weak economy and a crisis of authority caused by the former. The police and the army are having serious problems keeping the country together. We need to seriously rethink our policies."
 poland.6.a:0 "Liberalise, introduce more democracy in Poland"
-poland.6.b:0 "The government collapses!"
-poland.6.c:0 "Invite the military to form a new government"
+poland.6.b:0 "The Government Collapses!"
+poland.6.c:0 "Invite the Military to Form a New Government"
 poland.7.t:0 "Chaos in the Countryside"
 poland.7.d:0 "After the collapse of the government in Poland, various factions have risen up and are vying for control of the country. Both the Syndicalist party and the Nationalist circles are strong enough to take over the Polish cities and countryside. With the remaining authorities sceptical of their own ability to retain what power they have left, most have given up and...."
 poland.7.a:0 "The Syndicalists take over!"
