--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -327,7 +327,7 @@ STATE_324:0 "Bhutan"
 STATE_325:0 "Yunnan"
 STATE_326:0 "Hong Kong"
 STATE_327:0 "Manila"
-STATE_328:0 "Kirin"
+STATE_328:0 "Andong"
 STATE_329:0 "Tuva"
 STATE_330:0 "Mongolia"
 STATE_331:0 "Newfoundland"
@@ -713,10 +713,10 @@ STATE_710:0 "Diego Garcia"
 STATE_711:0 "Christmas Island"
 STATE_712:0 "Cocos Islands"
 STATE_713:0 "Kerguelen"
-STATE_714:0 "Heilungkiang"
-STATE_715:0 "Liaoning"
-STATE_716:0 "Liaotung"
-STATE_717:0 "Sungkiang"
+STATE_714:0 "Nenjiang"
+STATE_715:0 "Liaobei"
+STATE_716:0 "Fengtian"
+STATE_717:0 "Hejiang"
 STATE_718:0 "Moltkestadt"
 STATE_719:0 "Natal"
 STATE_720:0 "South Georgia"
@@ -882,3 +882,7 @@ STATE_879:0 "Katanga"
 STATE_880:0 "Dvinsk"
 STATE_881:0 "Zentralkongo"
 STATE_882:0 "Chaiyaburi"
+STATE_883:0 "Heilongjiang"
+STATE_884:0 "Xing'an"
+STATE_885:0 "Songjiang"
+STATE_886:0 "Jilin"
