Small POL + PLC tweaks

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -76,7 +76,7 @@ POL_a_new_poland:0 "A New Poland"
 POL_von_habsburg:0 "A von Habsburg!"
 POL_von_hohenzollern:0 "A Saxon King!"
 POL_polish_king:0 "A True Polish King!"
-POL_reincorporate_lithuania:0 "Reincorporate Lithuania"
+POL_reincorporate_lithuania:0 "Protect Lithuania"
 POL_line_of_succession:0 "A Clear Line of Succession"
 POL_join_international_community:0 "Join the International Community"
 POL_a_firm_hand:0 "A Firm Hand"
