--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -84,7 +84,7 @@ worldnews.22.t:0 "Jack Reed elected as President of the USA"
 worldnews.22.d:0 "Despite the massive instability rampant in the nation ever since the Great Depression in 1929, the presidential elections went forward, and the voting results are clear - Jack Reed of the Combined Syndicates of America is the 32nd President of the United States. \n\nJack Reed turned into a savvy political operator during his time in Russia, and is a dedicated proponent of Syndicalism. This stance has made him many enemies in the American society, but the association of trade unions that he leads remains strong. The AFP already contests the election results, though..."
 worldnews.22.a:0 "Let's see what this jumped up journalist can do."
 
-worldnews.23.t:0 "Restoration of the Polish-Lithuanian Commonwealth"
+worldnews.23.t:0 "The Polish-Lithuanian Commonwealth"
 worldnews.23.d:0 "In a surprising turn of events, the elections for the vacant throne of Poland have resulted in the restoration of a state thought to have been forgotten in history. \n\nDespite pressure from Austria and Germany, King Mindaugas III von Urach of Lithuania has been elected as the new King of Poland, and a new constitution was drafted to unite Poland and Lithuania back into the Commonwealth. It is not known if this new entity will be very stable, but the Poles seem to be enthusiastic."
 worldnews.23.a:0 "That's unexpected."
 
